// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemName /> should render with props 1`] = `
<ItemName
  href="#"
  name="Foo Bar"
  shrinkable={true}
>
  <div
    className="wrapper"
  >
    <Link
      color="black"
      href="#"
    >
      <a
        className="link link-black link-can-be-hovered"
        href="#"
        target="_self"
      >
        <Memo(Text)>
          <span
            className=""
          >
            <span
              className="name"
            >
              Foo Bar
            </span>
          </span>
        </Memo(Text)>
      </a>
    </Link>
  </div>
</ItemName>
`;

exports[`<ItemName /> should render without props 1`] = `
<ItemName>
  <div
    className="wrapper"
  >
    <Link
      color="black"
    >
      <span
        className="link link-black link-can-be-hovered"
      >
        <Memo(Text)>
          <span
            className=""
          >
            <span
              className="name"
            />
          </span>
        </Memo(Text)>
      </span>
    </Link>
  </div>
</ItemName>
`;
